--- a/ow2.asm/ASM_5_1/pom.xml
+++ b/ow2.asm/ASM_5_1/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
     <maven.javadoc.skip>true</maven.javadoc.skip>
+    <maven.source.skip>true</maven.source.skip>
   </properties>
   <build>
     <plugins>
@@ -31,6 +32,11 @@
         <configuration>
           <skip>true</skip>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
       </plugin>
     </plugins>
   </build>
