--- a/ow2.asm/ASM_6_0_ALPHA/pom.xml
+++ b/ow2.asm/ASM_6_0_ALPHA/pom.xml
@@ -10,6 +10,7 @@
   <packaging>jar</packaging>
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.source.skip>true</maven.source.skip>
     <maven.javadoc.skip>true</maven.javadoc.skip>
   </properties>
 
@@ -38,6 +39,11 @@
         <configuration>
           <skip>true</skip>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
       </plugin>
     </plugins>
   </build>
