--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ before_install:
   - unzip -qq apache-maven-3.2.5-bin.zip
   - export M2_HOME=$PWD/apache-maven-3.2.5
   - export PATH=$M2_HOME/bin:$PATH
+  - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo add-apt-repository -y ppa:webupd8team/java
   - sudo apt-get -y update
   - sudo apt-get -y install openjdk-6-jdk openjdk-7-jdk oracle-java7-installer oracle-java9-installer
