--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_install:
   - sudo add-apt-repository -y ppa:webupd8team/java
   - sudo apt-get -y update
   - sudo apt-get -y install openjdk-6-jdk openjdk-7-jdk oracle-java7-installer oracle-java9-installer
+  - sudo ln -s /usr/lib/jvm/java-6-openjdk-amd64 /usr/lib/jvm/java-6-openjdk
 
 before_script:
   - mysql -u root -e 'create database sfm;'
