--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.1</version>
+		<version>3.2-SNAPSHOT</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -32,20 +32,20 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>ow2asm</artifactId>
-			<version>3.1</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-util</artifactId>
-			<version>3.1</version>
+			<version>3.2-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter</artifactId>
-			<version>3.1</version>
+			<version>3.2-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
@@ -57,14 +57,14 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.1</version>
+			<version>3.2-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>3.1</version>
+			<version>3.2-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
