--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <version>2.2.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>2.5-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
