--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.5-SNAPSHOT</version>
+            <version>2.5s</version>
         </dependency>
 
     </dependencies>
