--- a/sfm-converter/pom.xml
+++ b/sfm-converter/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.3-SNAPSHOT</version>
+		<version>3.3</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-util</artifactId>
-			<version>3.3-SNAPSHOT</version>
+			<version>3.3</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 	</dependencies>
