--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,7 @@ before_install:
   - sudo ln -s /usr/lib/jvm/java-7-openjdk-amd64 /usr/lib/jvm/java-7-openjdk
   - sudo ln -s /usr/lib/jvm/java-8-oracle /usr/lib/jvm/java-8-oracle-amd64
 before_script:
-  - mysql -u root -e 'create database sfm;'
+  - mysql --verbose -u root -e 'create database sfm;'
+  - mysql --verbose -u root -e "CREATE USER 'sfm'@'localhost';"
+  - mysql --verbose -u root -e "GRANT ALL ON sfm.* TO 'sfm'@'localhost';"
   - psql -c 'create database sfm;' -U postgres
