--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -81,12 +81,12 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.4</version>
+			<version>6.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1211.jre6</version>
+			<version>9.4.1212.jre7</version>
 		</dependency>
 	</dependencies>
 
@@ -103,6 +103,11 @@
 					<groupId>mysql</groupId>
 					<artifactId>mysql-connector-java</artifactId>
 					<version>5.1.39</version>
+				</dependency>
+				<dependency>
+					<groupId>org.postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+					<version>9.4.1212.jre6</version>
 				</dependency>
 			</dependencies>
 		</profile>
