--- a/sfm-test-immutables/pom.xml
+++ b/sfm-test-immutables/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-immutables</artifactId>
 	<packaging>jar</packaging>
 
-	<version>3.6</version>
+	<version>3.7-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -34,13 +34,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
-			<version>3.6</version>
+			<version>3.7-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.6</version>
+			<version>3.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
