#391 add jdbi resultsetmapperfactory and SfmBind annotation

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <module>sfm-poi</module>
         <module>sfm-querydsl</module>
         <module>sfm-springjdbc</module>
+        <module>sfm-jdbi</module>
         <module>sfm-test</module>
         <module>ow2.asm/ASM_5_1</module>
   </modules>
