--- a/pom.xml
+++ b/pom.xml
@@ -114,13 +114,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.2.26</version>
+            <!--<version>2.2.26</version>-->
+            <version>2.6.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.5s</version>
+            <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
 
