--- a/pom.xml
+++ b/pom.xml
@@ -563,7 +563,7 @@
             <modules>
                 <module>sfm-test-sandbox</module>
                 <module>sfm-test-osgi</module>
-                <module>sfm-test-immutables</module>
+                <!--<module>sfm-test-immutables</module>-->
                 <module>sfm-jmh</module>
             </modules>
         </profile>
