--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>3.8-SNAPSHOT</version>
+		<version>3.8</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.8-SNAPSHOT</version>
+			<version>3.8</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.8-SNAPSHOT</version>
+			<version>3.8</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
