--- a/sfm-converter/pom.xml
+++ b/sfm-converter/pom.xml
@@ -138,9 +138,9 @@
 									<fork>true</fork>
 									<compilerArgs>
 										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.converter/org.simpleflatmapper.converter.impl.time=org.simpleflatmapper.converter.test</arg>
+										<arg>simpleflatmapper.converter/org.simpleflatmapper.converter.impl.time=simpleflatmapper.converter.test</arg>
 										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.converter/org.simpleflatmapper.converter.impl=org.simpleflatmapper.converter.test</arg>
+										<arg>simpleflatmapper.converter/org.simpleflatmapper.converter.impl=simpleflatmapper.converter.test</arg>
 									</compilerArgs>
 								</configuration>
 								<goals>
