--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.12-SNAPSHOT</version>
+		<version>3.11.1</version>
 	</parent>
 
 	<description>Cassandra Datastax SFM supports.</description>
@@ -59,13 +59,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.12-SNAPSHOT</version>
+			<version>3.11.1</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>3.12-SNAPSHOT</version>
+			<version>3.11.1</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
@@ -79,7 +79,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.12-SNAPSHOT</version>
+			<version>3.11.1</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -98,14 +98,14 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.12-SNAPSHOT</version>
+			<version>3.11.1</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>3.12-SNAPSHOT</version>
+			<version>3.11.1</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
