--- a/sfm-map/pom.xml
+++ b/sfm-map/pom.xml
@@ -50,6 +50,13 @@
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-tuples</artifactId>
+			<version>3.12-SNAPSHOT</version>
+			<scope>test</scope>
+			<classifier>${jar.classifier}</classifier>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.7</version>
