#440 adjust property finder for fuller property to take precedence, add Date to protobuf timestamp comverter

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <module>sfm-tuples</module>
         <module>sfm-converter</module>
         <module>sfm-converter-joda-time</module>
+        <module>sfm-converter-protobuf</module>
         <module>sfm-csv</module>
         <module>sfm-jdbc</module>
         <module>sfm-datastax</module>
