--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -83,18 +83,7 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.cassandraunit</groupId>
-			<artifactId>cassandra-unit</artifactId>
-			<version>2.1.3.1</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-all</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
@@ -117,6 +106,25 @@
 		</dependency>
 	</dependencies>
 	<profiles>
+		<profile>
+			<activation>
+				<jdk>[1.6,1.9)</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.cassandraunit</groupId>
+					<artifactId>cassandra-unit</artifactId>
+					<version>2.1.3.1</version>
+					<scope>test</scope>
+					<exclusions>
+						<exclusion>
+							<groupId>io.netty</groupId>
+							<artifactId>netty-all</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+		</profile>
 		<profile>
 			<id>travis</id>
 			<activation>
@@ -195,23 +203,40 @@
 			<activation>
 				<jdk>9-ea</jdk>
 			</activation>
-
+			<properties>
+				<maven.test.skip>true</maven.test.skip>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 
+						<configuration>
+
+							
+						</configuration>
 						<executions>
 							<execution>
 								<id>default-testCompile</id>
 								<phase>test-compile</phase>
 								<configuration>
 									<fork>true</fork>
+
 									<compilerArgs>
 										<arg>--add-exports</arg>
 										<arg>simpleflatmapper.datastax/org.simpleflatmapper.datastax.impl=simpleflatmapper.datastax.test</arg>
 									</compilerArgs>
+									<testExcludes>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxHelper.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxCrudTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxMapperCollectionTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxMapperFactoryTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxMapperTupleTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxMapperUDTTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/DatastaxNumberTest.java</exclude>
+										<exclude>**/src/test/java/org/simpleflatmapper/datastax/test/SettableDataMapperTest.java</exclude>
+									</testExcludes>
 								</configuration>
 								<goals>
 									<goal>testCompile</goal>
