--- a/sfm-jdbi3/pom.xml
+++ b/sfm-jdbi3/pom.xml
@@ -42,7 +42,13 @@
 		<dependency>
 			<groupId>org.jdbi</groupId>
 			<artifactId>jdbi3</artifactId>
-			<version>3.0.0-beta0</version>
+			<version>3.0.0-beta1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.findbugs</groupId>
+					<artifactId>annotations</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 
