--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -31,13 +31,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>ow2asm</artifactId>
-			<version>3.12-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-util</artifactId>
 			<version>3.12-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
@@ -133,6 +126,7 @@
 								<artifactItem>
 									<groupId>org.simpleflatmapper</groupId>
 									<artifactId>ow2asm</artifactId>
+									<version>5.1</version>
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>target/classes</outputDirectory>
@@ -254,12 +248,12 @@
 					<optional>true</optional>
 					<scope>test</scope>
 				</dependency>
-				<dependency>
-					<groupId>org.simpleflatmapper</groupId>
-					<artifactId>ow2asm</artifactId>
-					<version>6.0_ALPHA</version>
-					<scope>provided</scope>
-				</dependency>
+				<!--<dependency>-->
+					<!--<groupId>org.simpleflatmapper</groupId>-->
+					<!--<artifactId>ow2asm</artifactId>-->
+					<!--<version>6.0_ALPHA</version>-->
+					<!--<scope>provided</scope>-->
+				<!--</dependency>-->
 			</dependencies>
 
 			<build>
@@ -285,7 +279,28 @@
                             </execution>
                         </executions>
                     </plugin>
-
+					<plugin>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>copy-asm</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.simpleflatmapper</groupId>
+											<artifactId>ow2asm</artifactId>
+											<version>6.0_ALPHA</version>
+										</artifactItem>
+									</artifactItems>
+									<outputDirectory>target/classes</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
