#440 use name and type to look property

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_install:
   - sudo -E add-apt-repository -y ppa:webupd8team/java
   - sudo apt-get -y update
   - echo install jdk6 jdk7
-  - sudo apt-get -y install openjdk-6-jdk openjdk-7-jdk oracle-java7-installer
+  - sudo apt-get -y install openjdk-6-jdk openjdk-7-jdk
   - sudo ln -s /usr/lib/jvm/java-6-openjdk-amd64 /usr/lib/jvm/java-6-openjdk
   - sudo ln -s /usr/lib/jvm/java-7-openjdk-amd64 /usr/lib/jvm/java-7-openjdk
   - sudo ln -s /usr/lib/jvm/java-8-oracle /usr/lib/jvm/java-8-oracle-amd64
