--- a/sfm-jdbi/pom.xml
+++ b/sfm-jdbi/pom.xml
@@ -118,7 +118,7 @@
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>9-ea</jdk>
+				<jdk>9</jdk>
 			</activation>
 			<build>
 				<plugins>
