--- a/sfm-test-lombok/pom.xml
+++ b/sfm-test-lombok/pom.xml
@@ -79,7 +79,7 @@
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>9-ea</jdk>
+				<jdk>9</jdk>
 			</activation>
 			<properties>
 				<jar.classifier>jdk9ea</jar.classifier>
