--- a/pom.xml
+++ b/pom.xml
@@ -415,7 +415,7 @@
         <profile>
             <id>jdk19</id>
             <activation>
-                <jdk>9-ea</jdk>
+                <jdk>9</jdk>
             </activation>
             <properties>
                 <source.classifier>jdk9ea-sources</source.classifier>
@@ -475,23 +475,6 @@
                                 <_nouses>true</_nouses>
                             </instructions>
                         </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.plexus</groupId>
-                                <artifactId>plexus-archiver</artifactId>
-                                <version>3.4</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>commons-lang</groupId>
-                                <artifactId>commons-lang</artifactId>
-                                <version>2.6</version>
-                            </dependency>
-                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
@@ -603,7 +586,7 @@
                     <name>env.TRAVIS</name>
                     <value>true</value>
                 </property>
-                <jdk>9-ea</jdk>
+                <jdk>9</jdk>
             </activation>
             <modules>
                 <module>sfm-test-sandbox</module>
