--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -115,7 +115,7 @@
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>9-ea</jdk>
+				<jdk>9</jdk>
 			</activation>
 			<dependencies>
 				<dependency>
