--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -91,7 +91,7 @@
 				<jdk>9</jdk>
 			</activation>
 			<properties>
-				<jar.classifier>jdk9ea</jar.classifier>
+				<jar.classifier>jdk9</jar.classifier>
 			</properties>
 			<build>
 				<plugins>
