--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -92,6 +92,11 @@
 							org.simpleflatmapper.*
 						</Import-Package>
 					</instructions>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>org.simpleflatmapper.csv</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
