--- a/sfm-jdbi3/pom.xml
+++ b/sfm-jdbi3/pom.xml
@@ -29,9 +29,14 @@
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
-						<Export-Package>org.simpleflatmapper.jdbi</Export-Package>
-						<Import-Package>org.simpleflatmapper.*,org.skife.jdbi.*</Import-Package>
+						<Export-Package>org.simpleflatmapper.jdbi3</Export-Package>
+						<Import-Package>org.simpleflatmapper.*,org.jdbi.*</Import-Package>
 					</instructions>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>org.simpleflatmapper.jdbi3</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
