--- a/sfm-map/pom.xml
+++ b/sfm-map/pom.xml
@@ -93,6 +93,11 @@
 							org.simpleflatmapper.converter.*
 						</Import-Package>
 					</instructions>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>org.simpleflatmapper.map</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 
