--- a/sfm-converter/pom.xml
+++ b/sfm-converter/pom.xml
@@ -52,6 +52,11 @@
 						<Require-Capability>osgi.extender;filter:="(osgi.extender=osgi.serviceloader.registrar)"</Require-Capability>
 						<Provide-Capability>osgi.serviceloader;osgi.serviceloader=org.simpleflatmapper.converter.ConverterFactoryProducer</Provide-Capability>
 					</instructions>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>org.simpleflatmapper.converter</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
