specify repo id

--- a/pom.xml
+++ b/pom.xml
@@ -565,6 +565,8 @@
                             <serverId>sonatype-nexus-staging</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                            <skipStagingRepositoryClose>false</skipStagingRepositoryClose>
+                            <
                         </configuration>
                     </plugin>
                 </plugins>
